# NaviOS

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  kernel.img  limine.conf  run.sh  test.sh  x86-navi.json
.cargo/: config.toml
.github/workflows/: build.yml  build_x86_64.yml
Shell/: .gitignore  README.md  build.zig  build.zig.zon
Shell/src/: Lexer.zig  builtin.zig  environment.zig  main.zig  repl.zig  utils.zig
TestBot/: build.zig  build.zig.zon
TestBot/src/: main.zig
include/: GDT.h  kernel.h
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: globals.rs  limine.rs  main.rs  shell.rs  test.rs  utils.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86/: gdt.rs  mod.rs
kernel/src/arch/x86_64/: acpi.rs  gdt.rs  idt.rs  mod.rs  power.rs  serial.rs  syscalls.rs
kernel/src/arch/x86_64/interrupts/: apic.rs  handlers.rs  idt.rs  mod.rs
kernel/src/arch/x86_64/threading/: mod.rs
kernel/src/devices/: mod.rs  serial.rs  tty.rs
kernel/src/drivers/: framebuffer.rs  keyboard.rs  keymapper.rs  mod.rs
kernel/src/drivers/keyboard/: keys.rs  mod.rs  set1.rs
kernel/src/drivers/vfs/: devicefs.rs  expose.rs  mod.rs  ramfs.rs
kernel/src/kernel/: vga.rs
kernel/src/memory/: allocator.rs  buddy_allocator.rs  frame_allocator.rs  mod.rs  page.rs  page_allocator.rs  paging.rs  sorcery.rs
kernel/src/syscalls/: io.rs  mod.rs  power.rs  processes.rs  utils.rs
kernel/src/terminal/: device.rs  framebuffer.rs  mod.rs  navitts.rs
kernel/src/threading/: expose.rs  mod.rs  processes.rs  resources.rs
kernel/src/utils/: alloc.rs  display.rs  elf.rs  errors.rs  expose.rs  ffi.rs  mod.rs  ustar.rs
libc/: .gitignore  README.md  build.zig  build.zig.zon  headergen.zig
libc/includes/: ctype.h  dirent.h  extra.h  root.h  stdio.h  stdlib.h  string.h
libc/src/: ctype.zig  dirent.zig  extra.zig  private.zig  root.zig  stdio.zig  stdlib.zig  string.zig
macros/: Cargo.toml
macros/src/: lib.rs
nash/: README.md  build.zig  build.zig.zon
nash/src/: main.zig
programs/: .gitignore  Makefile
programs/src/: cat.c  (+7 more)
shell/: .gitignore  Makefile
src/: boot.S  kernel.c  linker.ld  main.rs
stdlib/: .gitignore  Makefile  README.md
tests/: Cargo.toml
user/: test  test.c  test.s
(+39 files in other folders)
