[package]
name = "NaviOS"
version = "0.1.0"
edition = "2021"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
kernel = { target = "x86_64-unknown-none", path = "kernel", artifact = "bin", features = [
    "test",
] }
bootloader = { version = "0.11.7" }
bootloader-boot-config = "0.11.7"
# ensures no stack problems
[profile.dev]
opt-level = 1

[workspace]
members = ["kernel", "macros"]
