[package]
name = "NaviOS"
version = "0.1.0"
edition = "2021"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
kernel = { target = "x86_64-unknown-none", path = "kernel", artifact = "bin", features = [
    "test",
]}
tar = "0.4"

[workspace]
members = ["kernel", "macros"]

[profile.release]
debug = true
[profile.dev]
debug = true
