[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
noto-sans-mono-bitmap = { version = "0.3.0", features = [
    "raster_heights_all",
    "font_weights_all",
] }

lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
bitflags = "2.6.0"
macros = { path = "../macros" }
int-enum = "1.1"
heapless = "0.8.0"
limine = "0.3.0"

[dev-dependencies]
cc = "1.1.1"

[features]
test = []
